testdata/baselines/reference/submodule/conformance/importDeferNamespace(module=preserve).errors.txt
b.ts(1,19): error TS1005: 'from' expected.
b.ts(1,19): error TS1141: String literal expected.
b.ts(1,23): error TS1005: ';' expected.
b.ts(1,23): error TS2304: Cannot find name 'from'.
b.ts(3,1): error TS2304: Cannot find name 'aNs'.


==== a.ts (0 errors) ====
    export function foo() {
        console.log("foo from a");
    }
    
==== b.ts (5 errors) ====
    import defer * as aNs from "./a.js";
                      ~~~
!!! error TS1005: 'from' expected.
                      ~~~
!!! error TS1141: String literal expected.
                          ~~~~
!!! error TS1005: ';' expected.
                          ~~~~
!!! error TS2304: Cannot find name 'from'.
    
    aNs.foo();
    ~~~
!!! error TS2304: Cannot find name 'aNs'.